# open_rsai_markup

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
markup_creator_coco/: CMakeLists.txt
markup_creator_coco/include/: converter.h
markup_creator_coco/src/: converter.cpp  main.cpp
markup_scripts/: CMakeLists.txt  label_studio_markup_transfer.py
markup_writer/: CMakeLists.txt
markup_writer/command/: CMakeLists.txt
markup_writer/command/src/: main.cpp
markup_writer/functional/: CMakeLists.txt
markup_writer/functional/include/rsai/: markup_writer.h  markup_writer.hpp
markup_writer/functional/src/: markup_writer.cpp
markup_writer/tests/: CMakeLists.txt
